Modified reference to contact me instead

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <a routerLink="/experience" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">Experience</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/references" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">References</a>
+        <a routerLink="/references" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">Contact Me</a>
       </li>
     </ul>
   </div>
