--- a/src/app/pages/references/references.component.html
+++ b/src/app/pages/references/references.component.html
@@ -1,6 +1,6 @@
 <section class="references-section">
   <div class="section-header">
-    <h1>References & Links</h1>
+    <h1>Contact Me</h1>
     <p>
       Connect with me on social media, view my code repositories, or download my
       resume.
