--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -11,6 +11,7 @@
       </div>
       <div class="project-content">
         <h3>{{ project.title }}</h3>
+        <h1>{{project.date}}</h1>
         <p>{{ project.description }}</p>
         <div class="project-tech">
           <span *ngFor="let tech of project.technologies" class="tech-tag">{{ tech }}</span>
