Changed index page description

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,11 +4,9 @@
       <h1>
         <span class="typed-name"></span>
       </h1>
-      <!-- <h2>{{ title }}</h2> -->
     </div>
   </div>
   <div class="profile-image">
-      <!-- Placeholder for profile image -->
       <!-- <div>
         <img src="assets/img/IMG_5081.JPG" alt="Profile image" class="placeholder-image">
       </div> -->
@@ -17,7 +15,7 @@
     <div class="about-text">
       <p>
         Thanks for visiting! My name is Timothy Kim, and I'm currently pursuing a bachelor's of science in software engineering
-        at San José State University. My main interests lie in full-stack development and embedded systems, but I'm always exploring
+        at San José State University. My main interests lie in full-stack development and low-level systems programming, but I'm always exploring
         other areas where my skills can be best applied.
       </p>
       <p>
@@ -26,7 +24,7 @@
         playing/watching basketball, and overall just having a great time with family and friends.
       </p>
       <p>
-        Currently, I am looking for any new grad roles focusing on software engineering, software development, or embedded system design.
+        Currently, I am looking for any new grad roles related to software engineering and/or development, embedded systems, and firmware.
         If anything here sparks your interest, please don't hesitate in contacting me! 
       </p>
     </div>
