--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -21,7 +21,7 @@
       <p>
         As of now, I am interning at Lawrence Livermore National Laboratory, where I am working on a data archival tool utilized by a variety of other teams within the Lab.
         I'm also the treasurer of our school's ACM chapter and compete in the university's archery team. Outside of school, you can catch me running,
-        playing/watching basketball, and overall just having a great time with family and friends.
+        playing/watching basketball, at the archery range, or having a great time with family and friends.
       </p>
       <p>
         Currently, I am looking for any new grad roles related to software engineering and/or development, embedded systems, and firmware.
