--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,16 +1,16 @@
 <section class="about-section">
   <div class="about-header">
     <div class="about-intro">
-      <h1>
-        <span class="typed-name"></span>
-      </h1>
-    </div>
+  <h1>
+    <span #typedName class="typed-primary"></span>
+  </h1>
+
+  <p class="now-inline">
+    <span class="now-label">Right now I am probably:</span>
+    <span #typedActivity class="typed-primary"></span>
+  </p>
+</div>
   </div>
-  <div class="profile-image">
-      <!-- <div>
-        <img src="assets/img/IMG_5081.JPG" alt="Profile image" class="placeholder-image">
-      </div> -->
-    </div>
   <div class="about-content">
     <div class="about-text">
       <p>
@@ -19,7 +19,7 @@
         other areas where my skills can be best applied.
       </p>
       <p>
-        As of now, I am interning at Lawrence Livermore National Laboratory, where I am working on a data archival tool utilized by a variety of other teams within the Lab.
+        Previously, I interned at the Lawrence Livermore National Laboratory and Blackhawk Network, where I contributed to the development of full-stack web applications.
         I'm also the treasurer of our school's ACM chapter and compete in the university's archery team. Outside of school, you can catch me running,
         playing/watching basketball, at the archery range, or having a great time with family and friends.
       </p>
@@ -27,6 +27,13 @@
         Currently, I am looking for any new grad roles related to software engineering and/or development, embedded systems, and firmware.
         If anything here sparks your interest, please don't hesitate in contacting me! 
       </p>
+      <div class="about-photo">
+  <img
+    src="assets/img/profile.png"
+    alt="Photo of Timothy Kim"
+    loading="lazy"
+  />
+</div>
     </div>
     <div class="skills-section">
       <h3>Skills</h3>
@@ -41,3 +48,4 @@
     </div>
   </div>
 </section>
+
