--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,18 +3,50 @@
     <div class="menu-icon" (click)="toggleMenu()">
       <i class="fas" [ngClass]="isMenuOpen ? 'fa-times' : 'fa-bars'"></i>
     </div>
-    <ul class="nav-menu" [ngClass]="{'active': isMenuOpen}">
+
+    <ul class="nav-menu" [ngClass]="{ 'active': isMenuOpen }">
       <li class="nav-item">
-        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link" (click)="isMenuOpen = false">About</a>
+        <a
+          routerLink="/"
+          fragment="about"
+          class="nav-link"
+          (click)="isMenuOpen = false"
+        >
+          About
+        </a>
       </li>
+
       <li class="nav-item">
-        <a routerLink="/projects" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">Projects</a>
+        <a
+          routerLink="/"
+          fragment="experience"
+          class="nav-link"
+          (click)="isMenuOpen = false"
+        >
+          Experience
+        </a>
       </li>
+
       <li class="nav-item">
-        <a routerLink="/experience" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">Experience</a>
+        <a
+          routerLink="/"
+          fragment="projects"
+          class="nav-link"
+          (click)="isMenuOpen = false"
+        >
+          Projects
+        </a>
       </li>
+
       <li class="nav-item">
-        <a routerLink="/references" routerLinkActive="active" class="nav-link" (click)="isMenuOpen = false">Contact Me</a>
+        <a
+          routerLink="/"
+          fragment="contact"
+          class="nav-link"
+          (click)="isMenuOpen = false"
+        >
+          Contact Me
+        </a>
       </li>
     </ul>
   </div>
