--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -24,7 +24,7 @@
         playing/watching basketball, at the archery range, or having a great time with family and friends.
       </p>
       <p>
-        Currently, I am looking for any new grad roles related to software engineering and/or development, embedded systems, and firmware.
+        Currently, I am looking for any new grad roles related to software engineering and/or development, embedded systems, firmware, and site reliability engineering.
         If anything here sparks your interest, please don't hesitate in contacting me! 
       </p>
       <div class="about-photo">
