--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -48,7 +48,7 @@
 .placeholder-project-image {
   width: 100%;
   height: 100%;
-  background-color: #4cc9f0;
+  background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -97,7 +97,7 @@
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
-  color: #4cc9f0;
+  color: black;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s ease;
