--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,7 +1,6 @@
 <section class="projects-section">
   <div class="section-header">
-    <h1>My Projects</h1>
-    <p>A page showcasing some of the projects that I've worked on</p>
+    <h1>Projects</h1>
   </div>
 
   <div class="projects-grid">
